vm/src/snapshots/stak_vm__memory__tests__create.snap
---
source: vm/src/memory.rs
expression: memory
---
code: c0
stack: c0
00: n0 n0 <- code <- register <- stack
02: c0 c0
