vm/src/snapshots/stak_vm__memory__tests__create_list-2.snap
---
source: vm/src/memory.rs
expression: memory
---
code: !:0
stack: !:0
00: n0 n0
02: c0:0 c0:0
04: n1 c0:0
06: n2 c4:0
