vm/src/snapshots/stak_vm__memory__tests__create_list-3.snap
---
source: vm/src/memory.rs
expression: memory
snapshot_kind: text
---
code: !
stack: !
00: n0 n0 <- code
02: c0 c0
04: n1 c0
06: n2 c4
08: n3 c6
